<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


  <item
      android:id="@+id/message"
      android:icon="@mipmap/ic_message"
      android:title="@string/title_activity_send_message" />

  <item
    android:id="@+id/contact_list"
    android:icon="@mipmap/ic_contacts"
    android:title="@string/title_activity_admin_main" />

  <item
    android:id="@+id/notifications"
    android:icon="@mipmap/ic_notifications"
    android:title="Notifications" />

  <item
    android:id="@+id/add_users"
    android:icon="@mipmap/ic_add_user"
    android:title="@string/title_activity_add_user" />

  <item
    android:id="@+id/generate_key"
    android:icon="@mipmap/ic_key_large"
    android:title="@string/title_activity_generate_key" />

  <item
      android:id="@+id/change_password"
      android:icon="@mipmap/ic_password"
      android:title="Change Password" />

  <item
    android:id="@+id/config"
    android:icon="@mipmap/ic_settings"
    android:title="Settings" />



  <item
    android:id="@+id/logout"
    android:icon="@mipmap/ic_logout"
    android:title="Logout" />
</menu>
