<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center_horizontal"
  android:orientation="vertical"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  tools:context="onemessagecompany.onemessage.Admin.EditUserActivity">


  <ScrollView
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:id="@+id/email_login_form"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:weightSum="1">


      <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:text="@string/title_activity_edit_user"
        android:textSize="@dimen/pad_20dp" />

      <EditText
        android:id="@+id/edit_UserName"
        style="@style/editext_graybg"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/pad_10dp"
        android:hint="@string/add_user_name"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true" />


      <EditText
        android:id="@+id/edit_FirstName"
        style="@style/editext_graybg"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/pad_10dp"
        android:layout_marginTop="@dimen/pad_5dp"
        android:hint="@string/add_first_name"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true" />

      <EditText
        android:id="@+id/edit_LastName"
        style="@style/editext_graybg"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/pad_10dp"
        android:layout_marginTop="@dimen/pad_5dp"
        android:hint="@string/add_last_name"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true" />


      <CheckBox
        android:id="@+id/edit_checkBox"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="0.50"
        android:text="@string/add_new_active" />

      <Button
        android:id="@+id/edit_button"
        style="@style/btn_white_large"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:text="@string/edit_user_save"
        android:textStyle="bold" />

    </LinearLayout>
  </ScrollView>

</LinearLayout>
