<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center_horizontal"
  android:orientation="vertical"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  tools:context="onemessagecompany.onemessage.Admin.AddUser">


  <ScrollView
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
      android:focusableInTouchMode="true">

    <LinearLayout
      android:id="@+id/email_login_form"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:weightSum="1">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/pad_10dp">

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:src="@drawable/om_user_add"
      android:paddingLeft="@dimen/pad_5dp"
      android:paddingRight="@dimen/pad_5dp"/>

  <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:gravity="left|center"
      android:textAlignment="gravity"
      android:textColor="@color/colorMain"
      android:layout_height="44dp"
      android:text="@string/create_user_title"
      android:textSize="@dimen/pad_20dp" />

</LinearLayout>



      <EditText
        android:id="@+id/register_UserName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
          android:gravity="left|center"
          android:textAlignment="gravity"
          android:background="@color/gray_light"
          android:paddingLeft="@dimen/pad_5dp"
        android:layout_marginBottom="@dimen/pad_10dp"
        android:hint="@string/add_user_name"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true" />


      <EditText
        android:id="@+id/register_Email"
          android:gravity="left|center"
          android:textAlignment="gravity"
          android:background="@color/gray_light"
          android:paddingLeft="@dimen/pad_5dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/pad_10dp"
        android:hint="@string/add_user_emai"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true" />




      <EditText
        android:id="@+id/register_FirstName"
        android:layout_width="match_parent"
          android:gravity="left|center"
          android:textAlignment="gravity"
          android:background="@color/gray_light"
          android:paddingLeft="@dimen/pad_5dp"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/pad_10dp"
        android:layout_marginTop="@dimen/pad_5dp"
        android:hint="@string/add_first_name"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true" />

      <EditText
        android:id="@+id/register_LastName"
        android:layout_width="match_parent"
          android:gravity="left|center"
          android:textAlignment="gravity"
          android:background="@color/gray_light"
          android:paddingLeft="@dimen/pad_5dp"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/pad_10dp"
        android:layout_marginTop="@dimen/pad_5dp"
        android:hint="@string/add_last_name"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true" />

      <EditText
        android:id="@+id/register_Password"
        android:layout_width="match_parent"
          android:gravity="left|center"
          android:textAlignment="gravity"
          android:background="@color/gray_light"
          android:paddingLeft="@dimen/pad_5dp"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/pad_10dp"
        android:layout_marginTop="@dimen/pad_5dp"
        android:hint="@string/add_new_pass"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />


      <EditText
        android:id="@+id/register_ConfirmPassword"
        android:layout_width="match_parent"
          android:gravity="left|center"
          android:textAlignment="gravity"
          android:background="@color/gray_light"
          android:paddingLeft="@dimen/pad_5dp"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/pad_10dp"
        android:layout_marginTop="@dimen/pad_5dp"
        android:hint="@string/add_new_pass_confirm"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />


      <CheckBox
        android:id="@+id/register_checkBox"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="0.50"
        android:text="@string/add_new_active" />

      <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="@dimen/pad_18dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:text="@string/create_user"
        android:background="@color/colorMain"/>

    </LinearLayout>
  </ScrollView>

</LinearLayout>
