<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="onemessagecompany.onemessage.LoginActivity">

    <!-- Login progress -->
  <ScrollView
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:id="@+id/email_login_form"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

      <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:layout_marginBottom="@dimen/pad_20dp"
        android:src="@drawable/logo_login" />

      <EditText
        android:id="@+id/txt_user_name_login"
        style="@style/editext_graybg"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:drawableLeft="@drawable/ic_username"
        android:hint="@string/login_user_name"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true" />

      <EditText
        android:id="@+id/txt_password_login"
        style="@style/editext_graybg"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginBottom="@dimen/pad_20dp"
        android:layout_marginTop="@dimen/pad_5dp"
        android:drawableLeft="@drawable/ic_pwd"
        android:hint="@string/prompt_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />

      <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/forgot"
        android:textColor="@color/main_color_green"
        android:textSize="14sp" />

      <Button
        android:id="@+id/email_sign_in_button"
        style="@style/btn_white_large"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:text="@string/action_sign_in"
        android:textStyle="bold" />

    </LinearLayout>
  </ScrollView>

  <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

</LinearLayout>
