<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  tools:context="onemessagecompany.onemessage.Public.SendMessageActivity">

  <ScrollView
    android:id="@+id/login_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
      android:id="@+id/email_login_form"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:weightSum="1">



      <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:text="@string/title_activity_send_message"
        android:textSize="@dimen/pad_20dp" />

      <EditText
        android:id="@+id/txt_sendMessage"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        style="@style/editextMultiLines_graybg"
        android:hint="@string/Message"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:singleLine="true" />



      <Button
        android:id="@+id/btnSendMessage"
        style="@style/btn_white_large"
        android:layout_width="310dp"
        android:layout_height="49dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/send_message"
        android:textStyle="bold" />


    </LinearLayout>
  </ScrollView>

</android.support.design.widget.CoordinatorLayout>
