<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:gravity="center_horizontal"
  android:orientation="vertical"
  android:paddingBottom="@dimen/activity_vertical_margin"
  android:paddingLeft="@dimen/activity_horizontal_margin"
  android:paddingRight="@dimen/activity_horizontal_margin"
  android:paddingTop="@dimen/activity_vertical_margin"
  tools:context="onemessagecompany.onemessage.Admin.EditUserActivity"
    android:focusableInTouchMode="true"
    android:id="@+id/ac_change_password">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/om_password"/>

  <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/pad_30dp"
      android:text="@string/change_password_body"
      android:textColor="@color/colorMain"
      android:textAlignment="center"
      android:textSize="@dimen/pad_20dp"
      android:layout_marginTop="@dimen/pad_5dp"/>

</LinearLayout>


    <LinearLayout
      android:id="@+id/email_login_form"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:paddingTop="50dp"
      android:weightSum="1">




      <EditText
        android:id="@+id/edit_password"
        android:background="@color/gray_light"
        android:layout_gravity="left"
        android:textAlignment="gravity"
        android:paddingLeft="@dimen/pad_10dp"
        android:layout_width="match_parent"
          android:textSize="@dimen/pad_15dp"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/pad_10dp"
        android:layout_marginTop="@dimen/pad_5dp"
        android:hint="@string/password"
        android:maxLines="1"
        android:inputType="textPassword"/>

      <EditText
        android:id="@+id/edit_confirmPassword"
          android:background="@color/gray_light"
          android:layout_gravity="left"
          android:textAlignment="gravity"
          android:paddingLeft="@dimen/pad_10dp"
          android:textSize="@dimen/pad_15dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="@dimen/pad_10dp"
        android:layout_marginTop="@dimen/pad_5dp"
        android:hint="@string/add_new_pass_confirm"
        android:maxLines="1"
        android:inputType="textPassword"/>

      <Button
        android:id="@+id/change_password_button"
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="@dimen/pad_18dp"
        android:background="@color/colorMain"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:text="@string/change_password_button" />

    </LinearLayout>


</LinearLayout>
